--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div id="timeContainer">
         <div id="timeDisplay">00:00:00</div>
         <button id="startBtn" class="timerBtn">start</button>
-        <button id="pauseBtn" class="timerBtn">timer</button>
+        <button id="pauseBtn" class="timerBtn">pause</button>
         <button id="restartBtn" class="timerBtn">restart</button>
     </div>
     <script src="index.js"></script>
